bug fix app size on mobile using dynamic viewport height

--- a/src/style.scss
+++ b/src/style.scss
@@ -282,7 +282,7 @@ body {
 
 @media only screen and (max-width: 767px) {
   .app {
-    width: 100vw;
+    width: 100dvw;
     height: 100vh;
     margin: auto;
   }
